--- a/views/index.haml
+++ b/views/index.haml
@@ -2,6 +2,8 @@
   %head
     
   %body
+    %h3="ciao"
+    =@data.inspect
 :javascript
   function getLocation() {
       if (navigator.geolocation) {
